syntax = "proto3";
package services.verifiablecredentials.v1;

option csharp_namespace = "Trinsic.Services.VerifiableCredentials.V1";
option go_package = "github.com/trinsic-id/sdk";
option java_package = "trinsic.services.verifiablecredentials.v1";
option objc_class_prefix = "TrinsicServices";

import "services/common/v1/common.proto";

message IssueRequest {
    string document_json = 1;
}

message IssueResponse {
    string signed_document_json = 1;
}

message IssueFromTemplateRequest {
    string template_id = 1;
    string values_json = 2;
}

message IssueFromTemplateResponse {
    string document_json = 1;
}

// Create Proof
message CreateProofRequest {
    // Optional document that describes which fields should be
    // revealed in the generated proof. If specified, this document must be
    // a valid JSON-LD frame.
    // If this field is not specified, a default reveal document will be
    // used and all fields in the signed document will be revealed
    string reveal_document_json = 1;
    // Specify the input to be used to derive this proof.
    // Input can be an existing item in the wallet or an input document
    oneof proof {
        // The item identifier that contains a record with a verifiable
        // credential to be used for generating the proof.
        string item_id = 2;
        // A document that contains a valid verifiable credential with an
        // unbound signature. The proof will be derived from this document
        // directly. The document will not be stored in the wallet.
        string document_json = 3;
    }
}

message CreateProofResponse {
    string proof_document_json = 1;
}

// Verify Proof
message VerifyProofRequest {
    string proof_document_json = 1;
}

message VerifyProofResponse {
    // Indicates if the proof is valid
    bool is_valid = 1;
    // Validation messages that describe invalid verifications
    // based on different factors, such as schema validation,
    // proof verification, revocation registry membership, etc.
    // If the proof is not valid, this field will contain detailed
    // results where this verification failed.
    repeated string validation_messages = 2;
}

message SendRequest {
    oneof delivery_method {
        string email = 1;
        string did_uri = 2;
        string didcomm_invitation_json = 3;
    }

    string document_json = 100;
}

message SendResponse {
    services.common.v1.ResponseStatus status = 1;
}

// request object to update the status of the revocation entry
message UpdateStatusRequest {
    // the credential status id
    string credential_status_id = 1;
    // indicates if the status is revoked
    bool revoked = 2;
}

// response object for update of status of revocation entry
message UpdateStatusResponse {
    services.common.v1.ResponseStatus status = 1;
}

// request object to update the status of the revocation entry
message CheckStatusRequest {
    // the credential status id
    string credential_status_id = 1;
}

// response object for update of status of revocation entry
message CheckStatusResponse {
    // indicates if the status is revoked
    bool revoked = 1;
}

service VerifiableCredential {
    // Sign and issue a verifiable credential from a submitted document.
    // The document must be a valid JSON-LD document.
    rpc Issue(IssueRequest) returns (IssueResponse);

    // Sign and issue a verifiable credential from a pre-defined template.
    // This process will also add schema validation and 
    // revocation registry entry in the credential.
    rpc IssueFromTemplate(IssueFromTemplateRequest) returns (IssueFromTemplateResponse);

    // Check credential status by setting the revocation value
    rpc CheckStatus(CheckStatusRequest) returns (CheckStatusResponse);

    // Update credential status by setting the revocation value
    rpc UpdateStatus(UpdateStatusRequest) returns (UpdateStatusResponse);

    // Create a proof from a signed document that is a valid
    // verifiable credential and contains a signature from which a proof can be derived.
    rpc CreateProof(CreateProofRequest) returns (CreateProofResponse);

    // Verifies a proof by checking the signature value, and if possible schema validation,
    // revocation status, and issuer status against a trust registry
    rpc VerifyProof(VerifyProofRequest) returns (VerifyProofResponse);

    // Sends a document directly to a user's email within the given ecosystem
    rpc Send(SendRequest) returns (SendResponse);
}
